--- a/src/views/partials/navSesion.pug
+++ b/src/views/partials/navSesion.pug
@@ -1,6 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
   .container
-    a.navbar-brand(href='#') CPS
+    img.logoNav(src="/img/logo_cps.png", alt="logoNavBar")
+    a.navbar-brand(href='/inicio') CPS
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarNavDropdown.collapse.navbar-collapse.ml-auto
