--- a/src/views/contacto.pug
+++ b/src/views/contacto.pug
@@ -8,5 +8,42 @@ html(lang="en")
         title Contacto
     body
     include partials/nav.pug 
+    .container-sm
+            .row.containerText
+                h2
+                    strong
+                        | Contacto
+            .row.text-center
+                h2
+                    strong
+                        | Coordinación Politécnica para la Sustentabilidad
+                .col-md-6.container-sm
+                    p
+                        strong 
+                            | Biól. Gabriela Chávez Hidalgo 
+                        br
+                        | Ext. 54458
+                    br
+                    p 
+                        strong 
+                            | Biól. Ma. del Pilar M. Herrera García
+                        br
+                        | Ext. 54457 
+                .col-md-6.container-sm
+                    p
+                        strong 
+                            | Ing. Lorena Yañez Godoy
+                        br
+                        | Ext. 54464
+                    br
+                    p 
+                        strong 
+                            | Biól. Verónica Pacheco González
+                        br
+                        | Ext. 54464 
+                h3
+                    a(href="mailto:sustentabilidad@ipn.mx") sustentabilidad@ipn.mx
+                    p
+                    a(href="www.sustentabilidad.ipn.mx")    www.sustentabilidad.ipn.mx
 
     include partials/footer.pug
