--- a/src/views/contacto.pug
+++ b/src/views/contacto.pug
@@ -44,6 +44,6 @@ html(lang="en")
                 h3
                     a(href="mailto:sustentabilidad@ipn.mx") sustentabilidad@ipn.mx
                     p
-                    a(href="www.sustentabilidad.ipn.mx")    www.sustentabilidad.ipn.mx
+                    a(href="www.ipn.mx/sustentabilidad")    www.ipn.mx/sustentabilidad/
 
     include partials/footer.pug
