--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -4,6 +4,7 @@ body{
     font-size: small;
     font-weight: 400;
     line-height: 1.5;
+    text-align: justify;
 }
 
 body h5{
@@ -106,6 +107,34 @@ table {
 
 .containerText{
     background: rgba(149, 204, 214, 0.5);
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-right: 110px;
+    margin-left: 110px;
+    text-align: justify;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 25px;
+}
+
+.containerTextEnergia{
+    background: rgba(216, 226, 81, 0.5);
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-right: 110px;
+    margin-left: 110px;
+    text-align: justify;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 25px;
+}
+
+.containerTextAice{
+    background: rgba(86, 206, 86, 0.5);
     margin-top: 20px;
     margin-bottom: 30px;
     margin-right: 110px;
