--- a/src/views/energia.pug
+++ b/src/views/energia.pug
@@ -6,16 +6,20 @@ head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Energ&iacute;a
 
-
+// Poner Graficos para bimestres Pregunta 2 para comparar años
 body
     include partials/navSesion.pug
-    .containerText
+    p
+        h2 
+            | Formulario de Energ&iacute;a
+    .containerTextEnergia
         form
             .form-col.containerPregunta
                 h5
                     | Responsable del registro actual:
                     p
         // Pregunta 1
+        // Poner un pop up  si contesta "NO" "En el area metropolitana solicitar a la dirección de servicios generales dserviciosgrales@ipn.mx"
         .form-group.col-md-6.containerPregunta
             label(for='pregunta1')
                 | 1. &iquest;Cuenta el inmueble con medidores de consumo de energ&iacute;a
@@ -35,6 +39,9 @@ body
                 input#opcionNo_1_1.custom-control-input(type='radio' name='customRadio1_1')
                 label.custom-control-label(for='opcionNo_1_1') No
         // Pregunta 2
+        // Si no cuenta con los registros de consumo exactas estimar segun los usuarios e intensidad de consumo
+
+        
         .form-group.col-md-6.containerPregunta
             label(for='pregunta2') 2. Ingresa el consumo aproximado por bimestre de los ultimos a&ntilde;o
             table.table
@@ -242,5 +249,26 @@ body
             .custom-control.custom-radio
                 input#opcion0_11.custom-control-input(type='radio' name='customRadio9')
                 label.custom-control-label(for='opcion0_11') 0 %
+                label.custom-control-label(for='opcion0_7') Nada
+        // Seccion para comentarios
+    h2
+        button(type="button" class="btn btn-outline-dark btn-sm" data-toggle="modal" data-target="#privacyButton") Aviso de privacidad
+
+.modal.fade(id='privacyButton' tabindex='-1' role='dialog' aria-labelledby='exampleModalLongTitle' aria-hidden='true')
+  .modal-dialog(role='document')
+    .modal-content
+      .modal-header
+        h5#exampleModalLongTitle.modal-title Aviso de privacidad
+        button.close(type='button' data-dismiss='modal' aria-label='Close')
+          span(aria-hidden='true') &times;
+      .modal-body
+        | Este diagn&oacute;stico no tiene validez legal ni oficial alguna, es un ejercicio de sondeo promovido a instancias de esta Coordinaci&oacute;n, buscando establecer una medici&oacute;n de las acciones que sobre estos temas realizan nuestras dependencias polit&eacute;cnicas.
+        p
+        | AVISO DE PRIVACIDAD 
+        br
+        | La informaci&oacute;n facilitada para realizar este *DIAGN&Oacute;STICO es de car&aacute;cter personal y privado, únicamente es de uso exclusivo y leg&iacute;timo para validar las respuestas en este diagn&oacute;stico. No se conservara ninguna informaci&oacute;n personal evitando dar otro uso a la misma que no sea la que corresponde a la realizaci&oacute;n y validaci&oacute;n de este ejercicio, seg&uacute;n lo establece la Ley Federal de Protecci&oacute;n de datos personales en posesi&oacute;n de los particulares en su art&iacute;culo 1 y 15.
+      .modal-footer
+        button.btn.btn-secondary(type='button' data-dismiss='modal') Cerrar
+
 // footer
 include partials/footer.pug
