--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
     body 
         include partials/nav.pug
         .container-sm 
+            #{user}
             #carouselCPS.carousel.slide(data-ride='carousel')
                 ol.carousel-indicators
                     li.active(data-target='#carouselCPS' data-slide-to='0')
@@ -33,6 +34,7 @@ html(lang="en")
                 h2
                     strong
                         | Preguntas Frecuentes
+
         .container-sm
             .row.containerText
                 h2
@@ -40,8 +42,14 @@ html(lang="en")
                         | Contacto
             .row.text-center
                 h2
+                    p
+                        strong 
+                            | Dr. Héctor Mayagoitia Domínguez  
+                h3
                     strong
                         | Coordinación Politécnica para la Sustentabilidad
+                    br
+                    
                 .col-md-6.container-sm
                     p
                         strong 
@@ -66,15 +74,36 @@ html(lang="en")
                             | Biól. Verónica Pacheco González
                         br
                         | Ext. 54464 
+                
                 h3
                     a(href="mailto:sustentabilidad@ipn.mx") sustentabilidad@ipn.mx
-                    a(href="www.sustentabilidad.ipn.mx")    www.sustentabilidad.ipn.mx
+                    p
+                    a(href="www.ipn.mx/sustentabilidad/")    www.ipn.mx/sustentabilidad/
 
         .container-sm
             .row.containerText
                 h2
                     strong
                         | Acerca De
+
+    h2
+        button(type="button" class="btn btn-outline-dark btn-sm" data-toggle="modal" data-target="#privacyButton") Aviso de privacidad
+
+.modal.fade(id='privacyButton' tabindex='-1' role='dialog' aria-labelledby='exampleModalLongTitle' aria-hidden='true')
+  .modal-dialog(role='document')
+    .modal-content
+      .modal-header
+        h5#exampleModalLongTitle.modal-title Aviso de privacidad
+        button.close(type='button' data-dismiss='modal' aria-label='Close')
+          span(aria-hidden='true') &times;
+      .modal-body
+        | Este diagn&oacute;stico no tiene validez legal ni oficial alguna, es un ejercicio de sondeo promovido a instancias de esta Coordinaci&oacute;n, buscando establecer una medici&oacute;n de las acciones que sobre estos temas realizan nuestras dependencias polit&eacute;cnicas.
+        p
+        | AVISO DE PRIVACIDAD 
+        br
+        | La informaci&oacute;n facilitada para realizar este *DIAGN&Oacute;STICO es de car&aacute;cter personal y privado, únicamente es de uso exclusivo y leg&iacute;timo para validar las respuestas en este diagn&oacute;stico. No se conservara ninguna informaci&oacute;n personal evitando dar otro uso a la misma que no sea la que corresponde a la realizaci&oacute;n y validaci&oacute;n de este ejercicio, seg&uacute;n lo establece la Ley Federal de Protecci&oacute;n de datos personales en posesi&oacute;n de los particulares en su art&iacute;culo 1 y 15.
+      .modal-footer
+        button.btn.btn-secondary(type='button' data-dismiss='modal') Cerrar
 
 
 
