--- a/src/views/agua.pug
+++ b/src/views/agua.pug
@@ -17,7 +17,9 @@ body
                     | Responsable del registro actual:
                     p
         // Pregunta 1
-        // Poner un pop up  si contesta "NO" "En el area metropolitana solicitar a la dirección de servicios generales dserviciosgrales@ipn.mx"
+        // Si contesta "No" habilitar opción múltiple 
+        // - Estimo el consumo según # de descargas de sanitarios y uso de lavabos
+        // - Estimo el consumo según el tiempo de riego
         .form-group.col-md-6.containerPregunta
             label(for='pregunta1') 1. &iquest;Cuenta el inmueble con medidores de consumo de agua potable?
             .custom-control.custom-radio
@@ -27,7 +29,9 @@ body
                 input#opcionNo_1.custom-control-input(type='radio' name='customRadio')
                 label.custom-control-label(for='opcionNo_1') No
                 p
+            // En caso de elegir "Si" Desplegar esta pregunta
             label(for='pregunta1_1') &iquest;Cuenta con copia de los recibos?
+            // Poner un pop up  si contesta "NO" "En el area metropolitana solicitar a la dirección de servicios generales dserviciosgrales@ipn.mx"
             .custom-control.custom-radio
                 input#opcionSi_1_1.custom-control-input(type='radio' name='customRadio1_1')
                 label.custom-control-label(for='opcionSi_1_1') Si
@@ -37,7 +41,7 @@ body
         // Pregunta 2 
         // PopUp Si no cuenta con los registros de consumo exactas estimar segun los usuarios e intensidad de consumo
         .form-group.col-md-6.containerPregunta
-            label(for='pregunta2') 2. Ingresa el consumo aproximado por bimestre de los ultimos a&ntilde;os
+            label(for='pregunta2') 2. Ingresa el consumo estimado por bimestre de los ultimos a&ntilde;os
             table.table
                 thead
                     tr
@@ -49,6 +53,20 @@ body
                         th(scope='col') 5to Bimestre
                         th(scope='col') 6to Bimestre
                 tbody
+                    tr
+                        th(scope='row') 2022
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
+                        td
+                            input#pregunta2.form-control(type='text' placeholder='L')
                     tr
                         th(scope='row') 2021
                         td
@@ -65,20 +83,6 @@ body
                             input#pregunta2.form-control(type='text' placeholder='L')
                     tr
                         th(scope='row') 2020
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                        td
-                            input#pregunta2.form-control(type='text' placeholder='L')
-                    tr
-                        th(scope='row') 2019
                         td
                             input#pregunta2.form-control(type='text' placeholder='L')
                         td
