update Inicio FQ&A

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -33,6 +33,15 @@ html(lang="en")
                 h2
                     strong
                         | Preguntas Frecuentes
+            .row.text-center
+                .col-md-6.container-sm
+                    strong 
+                        | ¿Qué es un plan de manejo ambiental?
+                    br
+                    | Es un instrumento de programación, que mediante la identificación de áreas de oportunidad y realización de prácticas correctivas, permite cumplir con las premisas de sustentabilidad, a través de estrategias de minimización de la generación de emisiones y descargas que impactan el ambiente, bajo criterios de eficiencia ambiental, tecnológica, económica y social que, para efectos del presente instrumento, se centran en tópicos de agua, energía y Áreas de conservación ecológica en el IPN (AICE).
+                .col-md-6.container-sm
+                    strong 
+                        | ¿Qué es un plan de manejo ambiental?
         .container-sm
             .row.containerText
                 h2
