update index FQ&A

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -33,6 +33,14 @@ html(lang="en")
                 h2
                     strong
                         | Preguntas Frecuentes
+            .row.text-center
+                .col-md-6.container-sm
+                    strong 
+                        | ¿Qué es un plan de manejo ambiental?
+                    
+                .col-md-6.container-sm
+                    strong 
+                        | ¿Qué es un plan de manejo ambiental?
         .container-sm
             .row.containerText
                 h2
