se modificaron los formularios

--- a/src/views/agua.pug
+++ b/src/views/agua.pug
@@ -8,7 +8,7 @@ head
 body
     include partials/navSesion.pug
     p
-        h2 
+        h1 
             | Formulario de Agua
     .containerText
         form
@@ -166,6 +166,9 @@ body
             .custom-control.custom-radio
                 input#opcion0_7.custom-control-input(type='radio' name='customRadio5')
                 label.custom-control-label(for='opcion0_7') Nada
+        center 
+            button.btn.btn-primary(type='button') Guardar Informaci&oacute;n
+        
         // Seccion de comentarios        
     h2
         button(type="button" class="btn btn-outline-dark btn-sm" data-toggle="modal" data-target="#privacyButton") Aviso de privacidad
