--- a/src/views/contacto.pug
+++ b/src/views/contacto.pug
@@ -9,11 +9,13 @@ html(lang="en")
     body
     include partials/nav.pug 
     .container-sm
-            .row.containerText
-                h2
-                    strong
-                        | Contacto
+        .row.centerLogin
+            h1
+                strong
+                    | Contacto
             .row.text-center
+                br
+                br
                 h2
                     strong
                         | Coordinación Politécnica para la Sustentabilidad
