--- a/src/views/energia.pug
+++ b/src/views/energia.pug
@@ -10,7 +10,7 @@ head
 body
     include partials/navSesion.pug
     p
-        h2 
+        h1 
             | Formulario de Energ&iacute;a
     .containerTextEnergia
         form
@@ -257,6 +257,9 @@ body
             .custom-control.custom-radio
                 input#opcion0_10.custom-control-input(type='radio' name='customRadio9')
                 label.custom-control-label(for='opcion0_10') 0 %
+        center 
+            button.btn.btn-warning(type='button') Guardar Informaci&oacute;n
+        
         // Seccion para comentarios
     h2
         button(type="button" class="btn btn-outline-dark btn-sm" data-toggle="modal" data-target="#privacyButton") Aviso de privacidad
