--- a/src/views/infoOperativa.pug
+++ b/src/views/infoOperativa.pug
@@ -42,7 +42,8 @@ include partials/navSesion.pug
             label.col-form-label.col-md-3 Total:
             .col-md-2
                 input.form-control.h-75.w-75(type="number" disabled="disabled")
-
+    center 
+        button.btn.btn-primary(type='button') Guardar Informaci&oacute;n
     
 //footer
 include partials/footer.pug
